# nginx-proxy-manager-mcp-addon

./: README.md  repository.yaml
nginx-proxy-manager-mcp/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  entrypoint.sh  run.sh
nginx-proxy-manager-mcp/npm_mcp_src/: README.md  pyproject.toml
nginx-proxy-manager-mcp/npm_mcp_src/src/npm_mcp/: client.py  config.py  exceptions.py  main.py  models.py  server.py
nginx-proxy-manager-mcp/rootfs/etc/s6-overlay/s6-rc.d/npm-mcp/: finish
nginx-proxy-manager-mcp/rootfs/etc/services.d/npm-mcp/: finish  run
nginx-proxy-manager-mcp/translations/: en.yaml
