[project]
name = "npm-mcp"
version = "0.0.2"
description = "MCP server for Nginx Proxy Manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=1.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
npm-mcp = "npm_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npm_mcp"]
